------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes. Please use the header
format provided for each entry.

Al
------------------------------------------------------------------------------

Fri Aug 10 23:38:14 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Reformatted TODO to fit in 80 columns.
	  Not sure if it's up to date though...
	* Reformatted BUGS to fit in 80 columns.
	  Not sure if it's up to date though...

Fri Aug  3 21:36:21 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Updated all files to refer to vger.kernel.org instead of to
	  vger.rutgers.edu as previously.

Sun Jul 29 19:44:58 BST 2001	Riley Williams <rhw@memalpha.cx>

	* Reformatted CHANGELOG to 80 character lines, with standardised
	  layout throughout.
	* Corrected spelling in CHANGELOG.

Sun Jul 01 16:49:34 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Added inet_select()

Fri Jun 29 17:05:39 GMT 2001	Riley Williams <rhw@memalpha.cx>

	* Add CONFIG_EXPERIMENTAL, CONFIG_OBSOLETE and CONFIG_NOT_YET to
	  Documentation/Configure.help and arch/i86/config.in files ready
	  for use with other options.
	* Rationalise arch/i86/config.in to enable `make menuconfig` to
	  work - previously, it didn't.
	* Upgrade scripts/Configure and scripts/Menuconfig to the versions
	  included with the Linux 2.4.5 kernel source trees.

Tue Jun 26 01:18:57 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* Semaphores made all inode downs block because sleeping when non
	  positive. Fixed to sleep on negative and wake on non negative.

Sun Jun 24 23:01:09 GMT 2001	Harry Kalogirou <harkal@rainbow.cs.unipi.gr>

	* implemented do_mknod()
	* Some fixes in AF_UNIX sockets.
	* socket.state changed to unsighed char to solve compiler problems
	* Modified ntty.c and serial.c to support "raw" mode required for
	  networking