@@ -6,6 +6,10 @@ format provided for each entry.
 Al
 ------------------------------------------------------------------------------
 
+Mon Aug 13 18:44:52 BST 2001	Riley Williams <rhw@memalpha.cx>
+
+	* Added HTMLised BUGS file, with updated details.
+
 Fri Aug 10 23:38:14 BST 2001	Riley Williams <rhw@memalpha.cx>
 
 	* Reformatted TODO to fit in 80 columns.
